--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,16 +5,27 @@
     android:layout_width="match_parent"
     android:background="?android:colorBackground"
     android:layout_height="match_parent"
-    tools:context="fr.appsolute.template.MainActivity">
+    tools:context="fr.braun.template.ui.activity.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/appToolbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        android:textAppearance="?textAppearanceHeadline6"
+        app:navigationIcon="@drawable/ic_button_arrow_back"
+        android:background="@color/color_background"
+        app:title="@string/app_toolbar_title"
+        app:layout_constraintTop_toTopOf="parent"
+        app:titleTextColor="@color/color_on_background"/>
+
+    <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/appFragmentContainer"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:defaultNavHost="true"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/appToolbar"
+        app:navGraph="@navigation/main_app_navigation_graph" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
